# NextGenFace

./: .gitignore  PORTING_PLAN.md  README.md  prd.json  prd.json.example  pyproject.toml
.claude/skills/: mitsuba3.md
NextFace/: camera.py  camera_mitsuba.py  config.py  envmap_mitsuba.py  gaussiansmoothing.py  gradient_bridge.py  image.py  landmarksfan.py  landmarksmediapipe.py  material_mitsuba.py  mesh_mitsuba.py  meshnormals.py  morphablemodel.py  normalsampler.py  optimConfig.ini  optimizer.py  pipeline.py  projection.py  render_mitsuba.py  renderer_mitsuba.py  replay.py  scene_mitsuba.py  sphericalharmonics.py  textureloss.py  utils.py  variant_mitsuba.py
configs/: default.ini  shadows.ini
docs/: architecture.md  demo.ipynb  guide.md  mitsuba3-porting.md
scripts/: reconstruct.py  replay.py
src/: __init__.py
src/facemodel/: __init__.py  _pickle_io.py  morphablemodel.py
src/geometry/: __init__.py  obj_export.py  projection.py
src/imaging/: __init__.py  image.py
src/landmarks/: __init__.py  _viz.py  fan.py  mediapipe.py
src/nextface/: __init__.py  cli.py
src/nextgenface/: __init__.py
src/optim/: __init__.py  config.py  optimizer.py  pipeline.py
src/rendering/: __init__.py  _camera.py  _envmap.py  _gradient_bridge.py  _material.py  _mesh.py  _scene.py  renderer.py
tests/: conftest.py  helpers.py  test_camera.py  test_checkpoint.py  test_e2e.py  test_gradients.py  test_image.py  test_material.py  test_mesh.py  test_optimization.py  test_renderer.py  test_scene_assembly.py  test_smoke.py  test_us001.py  test_us002.py  test_us004.py  test_us005.py  test_us006.py  test_us007.py  test_us008.py  test_us009.py  test_us010.py  test_us011.py  test_us012.py  test_us013.py  test_us014.py  test_us015.py  test_us016.py  test_us017.py  test_us018.py  test_us019.py  test_us020.py  test_us021.py  test_us022.py  test_us023.py  test_us024.py  test_us025.py  test_us026.py  test_us027.py  test_variant.py
