[project]
name = "nextface"
version = "0.1.0"
description = "3D face reconstruction using Mitsuba 3 differentiable rendering"
requires-python = ">=3.10"
dependencies = [
    "mitsuba>=3.5",
    "torch>=2.0",
    "numpy",
    "opencv-python",
    "h5py",
    "tqdm",
    "mediapipe",
    "face-alignment>=1.4.1",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
