[project]
name = "nextface"
version = "0.2.0"
description = "3D face reconstruction using Mitsuba 3 differentiable rendering"
requires-python = ">=3.10"
dependencies = [
    "mitsuba>=3.5",
    "torch>=2.0",
    "numpy",
    "opencv-python",
    "h5py",
    "tqdm",
    "mediapipe",
    "face-alignment>=1.4.1",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/nextface",
    "src/rendering",
    "src/facemodel",
    "src/geometry",
    "src/landmarks",
    "src/imaging",
    "src/optim",
]

[project.scripts]
nextface-reconstruct = "nextface.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["src", "tests"]
