[project]
name = "nextgenface"
version = "0.2.0"
description = "3D face reconstruction using Mitsuba 3 differentiable rendering"
requires-python = ">=3.11"
dependencies = [
    "mitsuba~=3.8",
    "torch~=2.10",
    "numpy~=2.4",
    "opencv-python~=4.13",
    "h5py~=3.15",
    "tqdm~=4.67",
    "mediapipe~=0.10",
    "face-alignment~=1.4",
    "torchvision~=0.25",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/nextgenface",
    "src/rendering",
    "src/facemodel",
    "src/geometry",
    "src/landmarks",
    "src/imaging",
    "src/optim",
]

[project.scripts]
nextgenface-reconstruct = "nextgenface.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["src", "tests"]
